# OpenShark

./: .gitignore  CMakeLists.txt  README.md  entitlements.plist
assets/: AppIcon.icns
qml/: main.qml
qml/components/: DetailPanel.qml  HexView.qml  NavBar.qml  PacketRow.qml  PlaceholderPage.qml  ProtocolBadge.qml  SettingsRow.qml  StatBigNumber.qml  StatusStrip.qml  StreamView.qml  TeslaButton.qml  TeslaCard.qml
qml/pages/: CapturesPage.qml  LivePage.qml  MapPage.qml  SettingsPage.qml  StatsPage.qml
qml/theme/: Theme.qml
scripts/: bootstrap.sh  package.sh
src/: AppController.cpp  AppController.h  main.cpp
src/capture/: PacketCapture.cpp  PacketCapture.h  PcapFileIO.cpp  PcapFileIO.h  RingBuffer.cpp  RingBuffer.h
src/dissect/: DissectedPacket.h  PacketDissector.cpp  PacketDissector.h
src/models/: InterfaceListModel.cpp  InterfaceListModel.h  NetworkMapModel.cpp  NetworkMapModel.h  PacketListModel.cpp  PacketListModel.h  StatsModel.cpp  StatsModel.h
